# tinybufr

./: .gitmodules  Cargo.toml  README.md  tables_to_rs.py
examples/: dump.rs  dump_json.rs
src/: descriptor.rs  lib.rs  reader.rs  sections.rs
src/tables/: mod.rs  table_b.rs  table_c.rs  table_d.rs
src/tables/local/: jma.rs  mod.rs
tests/: read_jma.rs
