[package]
name = "tinybufr"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.14.1"
bitstream-io = "2.6.0"
hashbrown = "0.15.2"
serde = { version = "1.0.219", features = ["derive"], optional = true}
smallvec = "1.14.0"
thiserror = "2.0.12"

[dev-dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["serde"]
serde = ["dep:serde"]
